Adjust star size, canton padding (to fix alignment issue)

--- a/styles.css
+++ b/styles.css
@@ -111,13 +111,13 @@ ul.stars {
     -webkit-margin-after: 0;
     width: 100%;
     height: 100%;
-    padding-top: 0.6vw;
+    padding-top: 0.5vw;
     padding-left: 0.3vw;
 }
 ul.stars li {
     display: inline;
     float: left;
-    padding: 0 1.65vw;
+    padding: 0 1.6vw;
     line-height: 1em;
 }
 ul.stars li.fixed-spacer {
